Added HATEOS support for list drivers endpoint. Added adjustments to filters match Laravel Paginator. Swagger reviewed to match HATEOS output. Json objects reviewed to match the original response of the project proposal.
